Add library view

--- a/src/main/webapp/i18n/en/book.json
+++ b/src/main/webapp/i18n/en/book.json
@@ -18,6 +18,7 @@
       },
       "name": "Name",
       "author": "Author",
+      "description": "Description",
       "part": "Part",
       "image": "Image",
       "cover": "Cover"
