--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -5,5 +5,14 @@
     "logged": {
       "message": "You are logged in as user \"{{username}}\"."
     }
+  },
+  "library": {
+    "title": "Library",
+    "read": "Read",
+    "download": "Download",
+    "downloading": "Ongoing",
+    "export": {
+      "ongoing": "The export is in progress.\r\nPlease wait..."
+    }
   }
 }
