--- a/src/main/webapp/i18n/fr/wordAnalysis.json
+++ b/src/main/webapp/i18n/fr/wordAnalysis.json
@@ -2,23 +2,23 @@
   "nidAuxHistoiresApp": {
     "wordAnalysis": {
       "home": {
-        "title": "WordAnalyses",
-        "createLabel": "Créer un nouveau Word Analysis",
-        "createOrEditLabel": "Créer ou éditer un Word Analysis",
-        "notFound": "Aucun Word Analysis trouvé"
+        "title": "Analyses de mots",
+        "createLabel": "Créer une nouvelle Analyse de mots",
+        "createOrEditLabel": "Créer ou éditer une Analyse de mots",
+        "notFound": "Aucune Analyse de mots trouvé"
       },
-      "created": "Un nouveau Word Analysis a été créé avec l'identifiant {{ param }}",
-      "updated": "Le Word Analysis avec l'identifiant {{ param }} a été mis à jour",
-      "deleted": "Le Word Analysis avec l'identifiant {{ param }} a été supprimé",
+      "created": "Une nouvelle Analyse de mots a été créé avec l'identifiant {{ param }}",
+      "updated": "L'Analyse de mots avec l'identifiant {{ param }} a été mis à jour",
+      "deleted": "L'Analyse de mots avec l'identifiant {{ param }} a été supprimé",
       "delete": {
-        "question": "Etes-vous certain de vouloir supprimer le Word Analysis {{ id }} ?"
+        "question": "Etes-vous certain de vouloir supprimer l'Analyse de mots' {{ id }} ?"
       },
       "detail": {
-        "title": "Word Analysis"
+        "title": "Analyse de mots"
       },
       "type": "Type",
-      "name": "Name",
-      "analysis": "Analysis"
+      "name": "Nom",
+      "analysis": "Analyse"
     }
   }
 }
