--- a/src/main/webapp/i18n/fr/login.json
+++ b/src/main/webapp/i18n/fr/login.json
@@ -9,11 +9,11 @@
     },
     "messages": {
       "error": {
-        "authentication": "<strong>Erreur d'authentification !</strong> Veuillez vérifier vos identifiants de connexion."
+        "authentication": "<strong>Erreur d'authentification\u00A0!</strong> Veuillez vérifier vos identifiants de connexion."
       }
     },
     "password": {
-      "forgot": "Avez-vous oublié votre mot de passe ?"
+      "forgot": "Avez-vous oublié votre mot de passe\u00A0?"
     }
   }
 }
