--- a/src/main/webapp/i18n/fr/password.json
+++ b/src/main/webapp/i18n/fr/password.json
@@ -5,8 +5,8 @@
       "button": "Sauvegarder"
     },
     "messages": {
-      "error": "<strong>Une erreur est survenue !</strong> Le mot de passe n'a pas pu être modifié.",
-      "success": "<strong>Le mot de passe a été modifié !</strong>"
+      "error": "<strong>Une erreur est survenue\u00A0!</strong> Le mot de passe n'a pas pu être modifié.",
+      "success": "<strong>Le mot de passe a été modifié\u00A0!</strong>"
     }
   }
 }
