--- a/src/main/webapp/i18n/fr/register.json
+++ b/src/main/webapp/i18n/fr/register.json
@@ -13,11 +13,11 @@
           "pattern": "Votre nom d'utilisateur est invalide."
         }
       },
-      "success": "<strong>Compte enregistré !</strong> Merci de vérifier votre email de confirmation.",
+      "success": "<strong>Compte enregistré\u00A0!</strong> Merci de vérifier votre email de confirmation.",
       "error": {
-        "fail": "<strong>Compte non créé !</strong> Merci d'essayer à nouveau plus tard.",
-        "userexists": "<strong>Ce compte utilisateur existe déjà !</strong> Veuillez en choisir un autre.",
-        "emailexists": "<strong>Cet email est déjà utilisé !</strong> Veuillez en choisir un autre."
+        "fail": "<strong>Compte non créé\u00A0!</strong> Merci d'essayer à nouveau plus tard.",
+        "userexists": "<strong>Ce compte utilisateur existe déjà\u00A0!</strong> Veuillez en choisir un autre.",
+        "emailexists": "<strong>Cet email est déjà utilisé\u00A0!</strong> Veuillez en choisir un autre."
       }
     }
   }
