--- a/src/main/webapp/i18n/fr/settings.json
+++ b/src/main/webapp/i18n/fr/settings.json
@@ -11,10 +11,10 @@
     },
     "messages": {
       "error": {
-        "fail": "<strong>Une erreur est survenue !</strong> Votre profil n'a pas été sauvegardé.",
-        "emailexists": "<strong>Cet email est déjà utilisé !</strong> Veuillez en choisir un autre."
+        "fail": "<strong>Une erreur est survenue\u00A0!</strong> Votre profil n'a pas été sauvegardé.",
+        "emailexists": "<strong>Cet email est déjà utilisé\u00A0!</strong> Veuillez en choisir un autre."
       },
-      "success": "<strong>Votre profil a été sauvegardé !</strong>",
+      "success": "<strong>Votre profil a été sauvegardé\u00A0!</strong>",
       "validate": {
         "firstname": {
           "required": "Votre prénom est requis.",
