--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -39,7 +39,13 @@
         "database": "Base de données",
         "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
       },
-      "language": "Langue"
+      "language": "Langue",
+      "footer": {
+        "legal-notice": "Mentions légales",
+        "help": "Aide",
+        "github": "Github",
+        "discord": "Discord"
+      }
     },
     "form": {
       "username.label": "Nom d'utilisateur",
