--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -39,7 +39,13 @@
         "database": "Database",
         "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
       },
-      "language": "Language"
+      "language": "Language",
+      "footer": {
+        "legal-notice": "Legal notice",
+        "help": "Help",
+        "github": "Github",
+        "discord": "Discord"
+      }
     },
     "form": {
       "username.label": "Username",
