--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -5,6 +5,8 @@
     "menu": {
       "home": "Home",
       "library": "Library",
+      "images": "Images",
+      "book": "Book",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entities",
