--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -5,6 +5,8 @@
     "menu": {
       "home": "Accueil",
       "library": "Bibliothèque",
+      "images": "Images",
+      "book": "Livre",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entités",
