add image viewer

--- a/src/main/webapp/i18n/fr/library.json
+++ b/src/main/webapp/i18n/fr/library.json
@@ -15,5 +15,8 @@
     "previous": "Précédent",
     "next": "Suivant",
     "author": "Auteur : "
+  },
+  "image": {
+    "no_image": "Pas d'image pour \"{{ entityName }}\""
   }
 }
