--- a/src/main/webapp/i18n/en/library.json
+++ b/src/main/webapp/i18n/en/library.json
@@ -15,5 +15,8 @@
     "previous": "Previous",
     "next": "Next",
     "author": "Author: "
+  },
+  "image": {
+    "no_image": "No image for \"{{ entityName }}\""
   }
 }
