--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -41,13 +41,7 @@
         "database": "Database",
         "jhipster-needle-menu-add-admin-element": "JHipster will add additional menu entries here (do not translate!)"
       },
-      "language": "Language",
-      "footer": {
-        "legal-notice": "Legal notice",
-        "help": "Help",
-        "github": "Github",
-        "discord": "Discord"
-      }
+      "language": "Language"
     },
     "form": {
       "username.label": "Username",
@@ -146,6 +140,5 @@
       "could.not.extract": "Could not extract file",
       "not.image": "File was expected to be an image but was found to be \"{{ fileType }}\""
     }
-  },
-  "footer": "This is your footer"
+  }
 }
