add english translation

--- a/src/main/webapp/i18n/en/library.json
+++ b/src/main/webapp/i18n/en/library.json
@@ -14,7 +14,7 @@
     "select_chapter": "Please select a chapter",
     "previous": "Previous",
     "next": "Next",
-    "author": "Author: "
+    "author": "Author\u00A0: "
   },
   "image": {
     "no_image": "No image for \"{{ entityName }}\""
