--- a/src/main/webapp/i18n/fr/help.json
+++ b/src/main/webapp/i18n/fr/help.json
@@ -1,5 +1,26 @@
 {
   "help": {
-    "title": "Aide"
+    "title": "Aide",
+    "accessibility": {
+      "title": "Accessibilité tout public",
+      "body": "Ce site est conçu pour être accessible au public le plus large possible (contrastes, choix des couleurs) tout en conservant son identité visuelle. Cependant, il est possible que certains points nous aient échappé lors de sa conception, aussi toute remarque constructive sera la bienvenue sur le <a href=\"{{discordUrl}}\">Discord</a> de la communauté, dans la section dédiée à l'accessibilté à tous."
+    },
+    "download": {
+      "title": "Téléchargement au format Word",
+      "body1": "Pour télécharger l'œuvre de votre choix, cliquez sur l'icone\u00A0:",
+      "body2": "Le livre sera téléchargé au format .docx (word)."
+    },
+    "convert": {
+      "title": "Convertir au format epub",
+      "body": "Pour convertir facilement vos téléchargements au format epub, vous pouvez utiliser Word ou LibreOffice en passant par l'outil d'export\u00A0: <b>fichier -> exporter vers -> exporter au format EPUB</b> (ordinateur uniquement). Pour un meilleur confort de lecture, sélectionnez l'option \"Méthode de cission\u00A0: saut de pages\""
+    },
+    "generators": {
+      "title": "Utilisation des générateurs",
+      "body": "Les générateurs sont mis à votre disposition en tant qu'outils ludiques pour vous permettre de créer librement. Ils seront complétés et étoffés dans le cycle de vie du site. Cependant, si vous souhaitez aider à l'élaboration de nouveaux dictionnaires, vous pouvez vous rendre sur le <a href=\"{{discordUrl}}\">Discord</a> de la communauté, dans la section dédiée au partage et a l'amélioration du contenu."
+    },
+    "sharing": {
+      "title": "Partager vos œuvres",
+      "body": "Vous souhaitez ajouter votre livre sur ce site\u00A0? Pas de soucis\u00A0! Contactez-nous sur le <a href=\"{{discordUrl}}\">Discord</a> de la communauté, dans la section dédiée aux nouveaux auteurs."
+    }
   }
 }
