--- a/src/main/webapp/i18n/fr/library.json
+++ b/src/main/webapp/i18n/fr/library.json
@@ -14,7 +14,7 @@
     "select_chapter": "Veuillez sélectionner un chapitre",
     "previous": "Précédent",
     "next": "Suivant",
-    "author": "Auteur : "
+    "author": "Auteur\u00A0: "
   },
   "image": {
     "no_image": "Pas d'image pour \"{{ entityName }}\""
