Commit d'avant redo

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -18,6 +18,7 @@
         "image": "Image",
         "idea": "Idea",
         "wordAnalysis": "Word Analysis",
+        "comment": "Comment",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
