--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -18,6 +18,7 @@
         "image": "Image",
         "idea": "Idée",
         "wordAnalysis": "Analyse de mots",
+        "comment": "Commentaire",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
