Add non-influencing files

--- a/src/main/webapp/i18n/en/comment.json
+++ b/src/main/webapp/i18n/en/comment.json
@@ -16,7 +16,9 @@
       "detail": {
         "title": "Comment"
       },
-      "text": "Text"
+      "text": "Text",
+      "book": "Book",
+      "user": "User"
     }
   }
 }
