--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -23,7 +23,8 @@
       },
       "account": {
         "main": "Compte",
-        "settings": "Profil",
+        "profile": "Profil",
+        "settings": "Paramètres",
         "password": "Mot de passe",
         "sessions": "Sessions",
         "login": "S'authentifier",
