--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -23,6 +23,7 @@
       },
       "account": {
         "main": "Account",
+        "profile": "Profile",
         "settings": "Settings",
         "password": "Password",
         "sessions": "Sessions",
