--- a/src/main/webapp/i18n/fr/account.json
+++ b/src/main/webapp/i18n/fr/account.json
@@ -1,5 +1,9 @@
 {
   "account": {
-    "title": "Compte"
+    "title": "Compte de [<strong>{{username}}</strong>]",
+    "lastName": "Nom : {{lastName}}",
+    "firstName": "Prénom : {{firstName}}",
+    "email": "E-mail : {{email}}",
+    "bookNumber": "Nombre de livres : {{number}}"
   }
 }
