Add presentation to profile

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -4,6 +4,7 @@
     "lastName": "Last name: {{lastName}}",
     "firstName": "First name: {{firstName}}",
     "email": "E-mail: {{email}}",
-    "bookNumber": "Number of books: {{number}}"
+    "bookNumber": "Number of books: {{number}}",
+    "introduction": "Introduction: {{introduction}}"
   }
 }
