--- a/src/main/webapp/i18n/fr/settings.json
+++ b/src/main/webapp/i18n/fr/settings.json
@@ -7,6 +7,8 @@
       "lastname": "Nom",
       "lastname.placeholder": "Votre nom",
       "language": "Langue",
+      "introduction": "Présentation",
+      "introduction.placeholder": "Votre présentation",
       "button": "Sauvegarder"
     },
     "messages": {
