--- a/src/main/webapp/i18n/en/settings.json
+++ b/src/main/webapp/i18n/en/settings.json
@@ -7,6 +7,8 @@
       "lastname": "Last Name",
       "lastname.placeholder": "Your last name",
       "language": "Language",
+      "introduction": "Introduction",
+      "introduction.placeholder": "Your introduction",
       "button": "Save"
     },
     "messages": {
