--- a/src/main/webapp/i18n/en/visit.json
+++ b/src/main/webapp/i18n/en/visit.json
@@ -1,5 +1,6 @@
 {
   "visit": {
+    "main": "Profile",
     "title": "Profile of [<strong>{{username}}</strong>]",
     "bookNumber": "Number of books: {{number}}",
     "introduction": "Introduction: {{introduction}}"
