--- a/src/main/webapp/i18n/fr/visit.json
+++ b/src/main/webapp/i18n/fr/visit.json
@@ -1,5 +1,6 @@
 {
   "visit": {
+    "main": "Profil",
     "title": "Profil de [<strong>{{username}}</strong>]",
     "bookNumber": "Nombre de livres : {{number}}",
     "introduction": "Présentation : {{introduction}}"
