Update author view

--- a/src/main/webapp/i18n/en/authors.json
+++ b/src/main/webapp/i18n/en/authors.json
@@ -1,5 +1,9 @@
 {
   "authors": {
-    "title": "List of authors"
+    "title": "List of authors",
+    "filter": {
+      "author": "Author",
+      "books": "Books"
+    }
   }
 }
