--- a/src/main/webapp/i18n/fr/authors.json
+++ b/src/main/webapp/i18n/fr/authors.json
@@ -1,5 +1,9 @@
 {
   "authors": {
-    "title": "Liste des auteurs"
+    "title": "Liste des auteurs",
+    "filter": {
+      "author": "Auteur",
+      "books": "Livres"
+    }
   }
 }
