Add comments page

--- a/src/main/webapp/i18n/en/comment.json
+++ b/src/main/webapp/i18n/en/comment.json
@@ -18,7 +18,10 @@
       },
       "text": "Text",
       "book": "Book",
-      "user": "User"
+      "user": "User",
+      "list": {
+        "title": "Comments for {{ bookName }}"
+      }
     }
   }
 }
