--- a/src/main/webapp/i18n/en/library.json
+++ b/src/main/webapp/i18n/en/library.json
@@ -2,6 +2,7 @@
   "library": {
     "title": "Library",
     "read": "Read",
+    "comments": "Comments",
     "synopsis": "Synopsis",
     "summary": "Summary",
     "download": "Download",
