--- a/src/main/webapp/i18n/fr/comment.json
+++ b/src/main/webapp/i18n/fr/comment.json
@@ -18,7 +18,10 @@
       },
       "text": "Text",
       "book": "Livre",
-      "user": "Utilisateur"
+      "user": "Utilisateur",
+      "list": {
+        "title": "Commentaires pour {{ bookName }}"
+      }
     }
   }
 }
