--- a/src/main/webapp/i18n/fr/library.json
+++ b/src/main/webapp/i18n/fr/library.json
@@ -2,6 +2,7 @@
   "library": {
     "title": "Bibliothèque",
     "read": "Lire",
+    "comments": "Commentaires",
     "synopsis": "Résumé",
     "summary": "Sommaire",
     "download": "Télécharger",
