--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -1,6 +1,6 @@
 {
   "account": {
-    "title": "Account of [<strong>{{username}}</strong>]",
+    "title": "Account of <strong>{{username}}</strong>",
     "lastName": "Last name: {{lastName}}",
     "firstName": "First name: {{firstName}}",
     "email": "E-mail: {{email}}",
