--- a/src/main/webapp/i18n/en/visit.json
+++ b/src/main/webapp/i18n/en/visit.json
@@ -1,7 +1,7 @@
 {
   "visit": {
     "main": "Profile",
-    "title": "Profile of [<strong>{{username}}</strong>]",
+    "title": "Profile of <strong>{{username}}</strong>",
     "bookNumber": "Number of books: {{number}}",
     "introduction": "Introduction: {{introduction}}"
   }
