--- a/src/main/webapp/i18n/fr/visit.json
+++ b/src/main/webapp/i18n/fr/visit.json
@@ -1,7 +1,7 @@
 {
   "visit": {
     "main": "Profil",
-    "title": "Profil de [<strong>{{username}}</strong>]",
+    "title": "Profil de <strong>{{username}}</strong>",
     "bookNumber": "Nombre de livres : {{number}}",
     "introduction": "Présentation : {{introduction}}"
   }
