Add comment section

--- a/src/main/webapp/i18n/en/comment.json
+++ b/src/main/webapp/i18n/en/comment.json
@@ -21,6 +21,13 @@
       "user": "User",
       "list": {
         "title": "Comments for {{ bookName }}"
+      },
+      "add": {
+        "title": "Add a comment",
+        "button": "Comment",
+        "question": "Your comment",
+        "validate": "Validate",
+        "cancel": "Cancel"
       }
     }
   }
